# Trading-212-Exit-Tax

./: .env.example  README.md  pyproject.toml
cloudflare/cloudflare/cloudflare/t212-exit-tax-proxy/: package-lock.json  package.json  wrangler.jsonc
cloudflare/cloudflare/cloudflare/t212-exit-tax-proxy/src/: index.js
data/raw/: transactions.json
docs/: app.js  index.html  styles.css
docs/data/: exit_tax_instruments_by_isin.json  positions.json
output/: snapshot.csv
src/t212_exit_tax/: cli.py  config.py  exit_tax.py  instrument_db.py  instruments.py  snapshot.py  t212_client.py
tests/: test_instrument_db.py
